# a-track

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.en.md  README.md  deploy.ps1  deploy.sh  docker-compose.dev.yml  docker-compose.yml
admin/: .dockerignore  (+5 more)
backend/: .dockerignore  .env.development  .env.production  Dockerfile  alembic.ini  config.toml  pyproject.toml  requirements.txt  reset_user.py  run.py
backend/alembic/: env.py
backend/alembic/versions/: 3c36242a9dbd_initial_postgresql_schema.py  4807d4a0a18a_add_concept_contents_table.py  4a5b6c7d8e9f_add_multi_subject_tables.py  ac780ae36564_revision_alias.py  b1c2d3e4f5g6_question_bank_enhancements.py  (+13 more)
backend/app/: __init__.py  main.py
backend/init-scripts/: 01-init-extensions.sql
backend/sandbox_worker/: Dockerfile  app.py
backend/scratch/: check_chapters.py
backend/scripts/: enable_all_subjects.py  prompt_playground.py  seed_subjects.py
backend/tests/: conftest.py  test_achievement_tree.py  test_ai_learning_path.py  test_ai_learning_path_defaults.py  test_ai_learning_path_llm_config.py  test_ai_learning_path_workbench_resources.py  test_assessment.py  test_concept_learning_diagram_spec.py  test_concept_learning_question_group_subject.py  test_concept_learning_source_scope.py  test_conversation_scope.py  test_conversation_timeline.py  test_dev_prompts_api.py  test_llm_config.py  test_prompt_quality_service.py  test_prompt_registry.py  test_prompt_version_store.py  test_question_bank.py  test_sandbox_service.py  test_sandbox_standalone.py  test_sandbox_worker_helpers.py
(+371 files in other folders)
