[project]
name = "ai-learning-platform-backend"
version = "0.1.0"
description = "FastAPI backend for the AI-driven Python adaptive learning platform."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic[email]>=2.6.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.26.0",
    "SQLAlchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "psycopg[binary]>=3.1.0",  # Async PostgreSQL driver with better Windows support
    "aiosqlite>=0.19.0",
    "pgvector>=0.2.4",
    "psycopg2-binary>=2.9.9",
    "python-jose[cryptography]>=3.3.0",
    "passlib[argon2]>=1.7.4",
    "argon2-cffi>=23.1.0",
    "cryptography>=41.0.0",
    "python-multipart>=0.0.6",
    "langchain>=0.1.5",
    "langchain-openai>=0.0.5",
    "openai>=1.10.0",
    "tiktoken>=0.5.2",
    "pandas>=2.2.0",
    "numpy>=1.26.3",
    "matplotlib>=3.8.2",
    "alembic>=1.13.1",
    "redis>=7.4.0",
]

[dependency-groups]
dev = [
    "black",
    "isort",
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Explicitly package the FastAPI backend code under ./app
packages = ["app"]
